# qin-todo-backend

./: .dockerignore  .env.sample  .gitignore  Dockerfile  Dockerfile.heroku  Procfile  README.md  account_key.samle.json  db.py  docker-compose.yml  how_to_heroku.md  pyproject.toml  requirements.txt
api/: db.py  main.py  migrate_db.py  user.py
api/cruds/: task.py
api/models/: task.py
api/router/: tasks.py
api/routers/: task.py
api/schemas/: task.py
api/shemas/: task.py
